feat: remove security stats
